objects/LLC_BI__Product_Package__c.object
<CustomObject>
    <fields>
        <fullName>Level_4_Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 4 Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_5_Approver__c</fullName>
        <formula>&quot;Loan Committee&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 5 Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Opportunity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PL Opportunity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Submission__c</fullName>
        <formula>IF(
   AND(
        LLC_BI__Reviewable_Loan_Facilities_Count__c &gt; 0,
        OR(
            Level_1_Sufficient_ILA__c = &quot;Yes&quot;,
            Level_2_Sufficient_ILA__c = &quot;Yes&quot;,
            Level_3_Sufficient_ILA__c = &quot;Yes&quot;,
            Level_4_Sufficient_ILA__c = &quot;Yes&quot;,
            Send_to_Loan_Committee__c = true
        ),
        OR(
           AND(
               Included_Loans_Have_Policy_Exceptions__c = true,
               OR(
                 Level_1_Policy_Exception_Approver__c = true,
                 Level_2_Policy_Exception_Approver__c = true,
                 Level_3_Policy_Exception_Approver__c = true,
                 Level_4_Policy_Exception_Approver__c = true
               )
            ),
            Included_Loans_Have_Policy_Exceptions__c = false,
            Send_to_Loan_Committee__c = true
        ),
        OR(
           Level_1_Highest_Risk_Grade__c &gt;= VALUE(TEXT(LLC_BI__Risk_Rating__c)), 
           Level_2_Highest_Risk_Grade__c &gt;= VALUE(TEXT(LLC_BI__Risk_Rating__c)),
           Level_3_Highest_Risk_Grade__c &gt;= VALUE(TEXT(LLC_BI__Risk_Rating__c)),
           Level_4_Highest_Risk_Grade__c &gt;= VALUE(TEXT(LLC_BI__Risk_Rating__c)),
           Send_to_Loan_Committee__c = true
        )
   ),
&quot;Yes&quot;,
&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Submission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_Loan_Committee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Loan Committee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsecured__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to indicate that TCE is unsecured</inlineHelpText>
        <label>Unsecured</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Package</label>
    <listViews>
        <fullName>Approval_No_Email_Queue_Product_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Approval No Email Queue</label>
        <queue>Approval_No_Email_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Primary_Officer__c</columns>
        <columns>LLC_BI__Secondary_Officer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Loan_Committee_Product_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Committee</label>
        <queue>Loan_Committee</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PP_VR01_Require_Flex_Approval_UWs</fullName>
        <active>true</active>
        <description>Require the correct number and level of underwriters</description>
        <errorConditionFormula>OR(
    AND(
        NOT(ISBLANK(Level_1_Underwriter__c)),
        OR(
           NOT(ISBLANK(Level_3_Underwriter__c)),
           NOT(ISBLANK(Level_4_Underwriter__c)),
           Send_to_Loan_Committee__c 
        )
    ),
    AND(
        NOT(ISBLANK(Level_2_Underwriter_Manager__c)),
        OR( 
           ISBLANK(Level_1_Underwriter__c),
           NOT(ISBLANK(Level_3_Underwriter__c)),
           NOT(ISBLANK(Level_4_Underwriter__c)),
           Send_to_Loan_Committee__c 
        )
    ),
    AND(
        NOT(ISBLANK(Level_3_Underwriter__c)),
        OR(
           NOT(ISBLANK(Level_1_Underwriter__c)),
           NOT(ISBLANK(Level_2_Underwriter_Manager__c)),
           NOT(ISBLANK(Level_4_Underwriter__c)),
           Send_to_Loan_Committee__c 
        )
    ),
    AND(
        NOT(ISBLANK(Level_4_Underwriter__c)),
        OR(
           NOT(ISBLANK(Level_1_Underwriter__c)),
           NOT(ISBLANK(Level_2_Underwriter_Manager__c)),
           NOT(ISBLANK(Level_3_Underwriter__c)),
           Send_to_Loan_Committee__c 
        )
    ),
    AND(
        Send_to_Loan_Committee__c,
        OR(
           NOT(ISBLANK(Level_1_Underwriter__c)),
           NOT(ISBLANK(Level_2_Underwriter_Manager__c)),
           NOT(ISBLANK(Level_3_Underwriter__c)),
           NOT(ISBLANK(Level_4_Underwriter__c))
        )
    )
)</errorConditionFormula>
        <errorMessage>Please ensure the proper number and level of underwriter(s) are present - PP VR01</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PP_VR02_Unique_Flex_Approval_UWs</fullName>
        <active>true</active>
        <description>Require unique underwriters</description>
        <errorConditionFormula>AND(
   NOT(ISBLANK(Level_1_Underwriter__c)),
   NOT(ISBLANK(Level_2_Underwriter_Manager__c)),
   Level_1_Underwriter__c = Level_2_Underwriter_Manager__c
)</errorConditionFormula>
        <errorMessage>Level 1 and level 2 Underwriters must be unique - PP VR02</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PP_VR03_Flex_Approval_PE_Approver</fullName>
        <active>true</active>
        <description>If Policy Exceptions exist, selected UW must be a PE approver</description>
        <errorConditionFormula>AND(
   Included_Loans_Have_Policy_Exceptions__c, 
   OR(
      AND(
         NOT(ISBLANK(Level_1_Underwriter__c)),
         ISBLANK( Level_2_Underwriter_Manager__c),
         Level_1_Policy_Exception_Approver__c = false 
      ),
      AND(
         NOT(ISBLANK(Level_1_Underwriter__c)),
         NOT(ISBLANK(Level_2_Underwriter_Manager__c)),
         Level_2_Policy_Exception_Approver__c = false 
      ),
      AND(
         NOT(ISBLANK(Level_3_Underwriter__c)),
         Level_3_Policy_Exception_Approver__c = false 
      ),
      AND(
         NOT(ISBLANK(Level_4_Underwriter__c)),
         Level_4_Policy_Exception_Approver__c = false 
      )
    )
)</errorConditionFormula>
        <errorMessage>The selected Underwriter cannot approve policy exceptions - PP VR03</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PP_VR04_Flex_Approval_UW_Risk_Grade</fullName>
        <active>true</active>
        <description>Selected UW&apos;s risk grade approval is too low</description>
        <errorConditionFormula>OR(
      AND(
         NOT(ISBLANK(Level_1_Underwriter__c)),
         ISBLANK(Level_2_Underwriter_Manager__c),
         ISBLANK(Level_3_Underwriter__c),
         ISBLANK(Level_4_Underwriter__c),
          Send_to_Loan_Committee__c = false,
         Level_1_Highest_Risk_Grade__c &lt; 
         VALUE(TEXT(LLC_BI__Risk_Rating__c)) 
      ),
      AND(
         NOT(ISBLANK(Level_1_Underwriter__c)),
         NOT(ISBLANK(Level_2_Underwriter_Manager__c)),
         ISBLANK(Level_3_Underwriter__c),
         ISBLANK(Level_4_Underwriter__c),
         Send_to_Loan_Committee__c = false,
         Level_2_Highest_Risk_Grade__c &lt; VALUE(TEXT(LLC_BI__Risk_Rating__c)) 
      ),
      AND(
         ISBLANK(Level_1_Underwriter__c),
         ISBLANK(Level_2_Underwriter_Manager__c),
         ISBLANK(Level_4_Underwriter__c),
         NOT(ISBLANK(Level_3_Underwriter__c)),
         Send_to_Loan_Committee__c = false,
         Level_3_Highest_Risk_Grade__c &lt; VALUE(TEXT(LLC_BI__Risk_Rating__c))  
      ),
      AND(
         ISBLANK(Level_1_Underwriter__c),
         ISBLANK(Level_2_Underwriter_Manager__c),
         ISBLANK(Level_3_Underwriter__c),
         NOT(ISBLANK(Level_4_Underwriter__c)),
         Send_to_Loan_Committee__c = false,
         Level_4_Highest_Risk_Grade__c &lt; VALUE(TEXT(LLC_BI__Risk_Rating__c)) 
      )
    )</errorConditionFormula>
        <errorMessage>The selected Underwriter&apos;s risk grade approval authority is too low - PP VR04</errorMessage>
    </validationRules>
</CustomObject>